--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <meta charset="utf-8" />
   </head>
   <body>
     <main></main>
-    <script src="deathEffects.js"></script>
-    <script src="entity.js"></script>
-    <script src="bullet.js"></script>
-    <script src="enemy.js"></script>
-    <script src="pawn.js"></script>
-    <script src="bishop.js"></script>
-    <script src="queen.js"></script>
-    <script src="king.js"></script>
-    <script src="player.js"></script>
-    <script src="powerup.js"></script>
-    <script src="sketch.js"></script>
+    <script src="js/deathEffects.js"></script>
+    <script src="js/entity.js"></script>
+    <script src="js/bullet.js"></script>
+    <script src="js/enemy.js"></script>
+    <script src="js/pawn.js"></script>
+    <script src="js/bishop.js"></script>
+    <script src="js/queen.js"></script>
+    <script src="js/king.js"></script>
+    <script src="js/player.js"></script>
+    <script src="js/powerup.js"></script>
+    <script src="js/sketch.js"></script>
   </body>
 </html>
